--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
-  
 body{
   margin:0;
   height:100vh;
@@ -21,7 +20,7 @@ body{
   text-align:center;
 }
 
-/* COEURS */
+/* 💕 Coeurs flottants */
 .heart{
   position:absolute;
   animation:floatUp 6s linear infinite;
@@ -31,8 +30,7 @@ body{
   to{transform:translateY(-10vh);opacity:0;}
 }
 
-/* ================= INTRO ================= */
-
+/* Intro */
 .intro{
   position:fixed;
   inset:0;
@@ -44,37 +42,13 @@ body{
   z-index:10;
   animation:fadeOutIntro 2s ease 4s forwards;
 }
+.bouquet{font-size:120px; animation:pop3D 2s ease forwards;}
+.introText{font-family:'Great Vibes',cursive;font-size:50px;margin-top:20px;opacity:0;animation:fadeInText 2s ease 1s forwards;}
+@keyframes pop3D{0%{transform:scale(0) rotateX(90deg);}50%{transform:scale(1.3) rotateX(0);}100%{transform:scale(1);}}
+@keyframes fadeInText{from{opacity:0;}to{opacity:1;}}
+@keyframes fadeOutIntro{to{opacity:0;pointer-events:none;}}
 
-.bouquet{
-  font-size:120px;
-  animation:pop3D 2s ease forwards;
-}
-
-.introText{
-  font-family:'Great Vibes',cursive;
-  font-size:50px;
-  margin-top:20px;
-  opacity:0;
-  animation:fadeInText 2s ease 1s forwards;
-}
-
-@keyframes pop3D{
-  0%{transform:scale(0) rotateX(90deg);}
-  50%{transform:scale(1.3) rotateX(0);}
-  100%{transform:scale(1);}
-}
-
-@keyframes fadeInText{
-  from{opacity:0;}
-  to{opacity:1;}
-}
-
-@keyframes fadeOutIntro{
-  to{opacity:0;pointer-events:none;}
-}
-
-/* ================= ENVELOPPE / LETTRE ================= */
-
+/* Enveloppe */
 .envelope{
   width:420px;
   height:300px;
@@ -87,8 +61,6 @@ body{
   box-shadow:0 10px 30px rgba(0,0,0,0.2);
   overflow:hidden;
 }
-
-/* Rabat haut */
 .flap{
   position:absolute;
   width:100%;
@@ -98,8 +70,6 @@ body{
   transition:1s;
   z-index:3;
 }
-
-/* Volets gauche/droite */
 .side{
   position:absolute;
   width:50%;
@@ -109,18 +79,10 @@ body{
   transition:1s;
   z-index:2;
 }
+.side.left{left:0; clip-path:polygon(0 0,100% 50%,0 100%);}
+.side.right{right:0; clip-path:polygon(100% 0,0 50%,100% 100%);}
 
-.side.left{
-  left:0;
-  clip-path:polygon(0 0,100% 50%,0 100%);
-}
-
-.side.right{
-  right:0;
-  clip-path:polygon(100% 0,0 50%,100% 100%);
-}
-
-/* Conteneur texte scrollable */
+/* Texte scrollable */
 .letterText{
   position:absolute;
   top:0;
@@ -138,145 +100,33 @@ body{
   opacity:0;
   transition:1s;
   z-index:1;
-  pointer-events:auto; /* pour que le clic passe sur l'enveloppe *//* permet le scroll */
 }
 
-/* OUVERTURE STYLE LETTRE */
+/* Ouverture */
 .open{
   height:520px;
 }
+.open .flap{transform:rotateX(180deg); transform-origin:top;}
+.open .side.left{transform:translateX(-100%);}
+.open .side.right{transform:translateX(100%);}
+.open .letterText{opacity:1;}
 
-.open .flap{
-  transform:rotateX(180deg);
-  transform-origin:top;
-}
-
-.open .side.left{
-  transform:translateX(-100%);
-}
-
-.open .side.right{
-  transform:translateX(100%);
-}
-
-.open .letterText{
-  opacity:1;
-}
-
-
-/* ================= FILM STRIPS ================= */
-
-.gallery{
-  position:fixed;
-  inset:0;
-  opacity:0;
-  pointer-events:none;
-}
-
-.filmContainer{
-  position:absolute;
-  inset:0;
-  display:flex;
-  justify-content:space-between;
-  overflow:hidden;
-}
-
-.stripWrapper{
-  width:120px;
-  overflow:hidden;
-}
-
-.filmStrip{
-  position:relative;
-  width:100%;
-  background:black;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:20px;
-  padding:40px 0;
-  animation:scrollDown 12s linear infinite;
-}
-
+/* Film strips */
+.gallery{position:fixed; inset:0; opacity:0; pointer-events:none;}
+.filmContainer{position:absolute; inset:0; display:flex; justify-content:space-between; overflow:hidden;}
+.stripWrapper{width:120px; overflow:hidden;}
+.filmStrip{position:relative; width:100%; background:black; display:flex; flex-direction:column; align-items:center; gap:20px; padding:40px 0; animation:scrollDown 12s linear infinite;}
 .scrollUp{ animation:scrollUp 12s linear infinite; }
-
-.filmStrip img{
-  width:90px;
-  border-radius:6px;
-  border:4px solid #222;
-}
-
-/* Trous pellicule */
-.filmStrip::before,
-.filmStrip::after{
-  content:"";
-  position:absolute;
-  top:0;
-  height:100%;
-  width:20px;
-  z-index:1;
-  background:repeating-linear-gradient(
-    to bottom,
-    transparent 0px,
-    transparent 30px,
-    #111 30px,
-    #111 50px
-  );
-}
-
-.filmStrip::before{ left:0; }
-.filmStrip::after{ right:0; }
-
-/* Animations verticales */
-
-@keyframes scrollDown{
-  from{transform:translateY(-50%);}
-  to{transform:translateY(0%);}
-}
-
-@keyframes scrollUp{
-  from{transform:translateY(0%);}
-  to{transform:translateY(-50%);}
-}
-
-/* Overlay centre */
-
-.centerOverlay{
-  position:absolute;
-  top:0;
-  left:35%;
-  width:30%;
-  height:100%;
-  background:rgba(0,0,0,0.75);
-  backdrop-filter:blur(4px);
-  z-index:3;
-}
-
-/* Texte final */
-
-.finalMessage{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  font-family:'Great Vibes',cursive;
-  font-size:60px;
-  color:white;
-  z-index:4;
-  opacity:0;
-  transition:2s;
-}
-
-/* Feux d'artifice */
-
-@keyframes explode{
-  from{transform:scale(1);opacity:1;}
-  to{transform:scale(20);opacity:0;}
-}
-
+.filmStrip img{width:90px; border-radius:6px; border:4px solid #222;}
+.filmStrip::before,.filmStrip::after{content:"";position:absolute;top:0;height:100%;width:20px; z-index:1; background:repeating-linear-gradient(to bottom,transparent 0px,transparent 30px,#111 30px,#111 50px);}
+.filmStrip::before{ left:0; } .filmStrip::after{ right:0; }
+@keyframes scrollDown{from{transform:translateY(-50%);} to{transform:translateY(0%);}}
+@keyframes scrollUp{from{transform:translateY(0%);} to{transform:translateY(-50%);}}
+.centerOverlay{position:absolute; top:0; left:35%; width:30%; height:100%; background:rgba(0,0,0,0.75); backdrop-filter:blur(4px); z-index:3;}
+.finalMessage{position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-family:'Great Vibes',cursive; font-size:60px; color:white; z-index:4; opacity:0; transition:2s;}
+@keyframes explode{from{transform:scale(1);opacity:1;} to{transform:scale(20);opacity:0;}}
 </style>
 </head>
-
 <body>
 
 <div class="intro" id="intro">
@@ -284,7 +134,7 @@ body{
   <div class="introText">Joyeuse Saint-Valentin ❤️</div>
 </div>
 
-<div class="envelope" onclick="envelope">
+<div class="envelope" id="envelope">
   <div class="flap"></div>
   <div class="side left"></div>
   <div class="side right"></div>
@@ -293,59 +143,24 @@ body{
 
 <div id="reminder" style="position:absolute;left:5%;top:50%;transform:translateY(-50%);opacity:0;transition:1s;z-index:6;text-align:center;">
   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/emoji-desole-tenant-un-bouquet-de-fleurs-3d-icon-png-download-12247331.png?f=webp" width="180">
-  <div style="font-family:'Poppins';margin-top:15px;color:white;">
-    Clique encore sur l'enveloppe 🥺
-  </div>
+  <div style="font-family:'Poppins';margin-top:15px;color:white;">Clique encore sur l'enveloppe 🥺</div>
 </div>
-
 
 <div class="gallery" id="gallery"></div>
 
-<!-- 🎵 MUSIQUE -->
 <audio id="music" loop>
   <source src="https://dn721809.ca.archive.org/0/items/78_14173-I-want-you-I-need-you-I-love-you/14173-I-want-you-I-need-you-I-love-you.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-
-let envelopeOpened=false;
-let envelopeClickCount = 0;
-let musicStarted=false;
-let typingFinished = false;
-let reminderTimeout;
-
+let envelopeClickCount=0, musicStarted=false, typingFinished=false, reminderTimeout;
 const music=document.getElementById("music");
+const envelope = document.getElementById("envelope");
+const textEl = document.getElementById("typedText");
 
 /* GALERIE */
-const images=[
-  "photo1.jpg",
-  "photo2.jpg",
-  "photo3.jpg",
-  "photo4.jpg",
-  "photo5.jpg",
-  "photo6.jpg",
-  "photo7.jpg",
-  "photo8.jpg"
-];
+const images=["photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg","photo5.jpg","photo6.jpg","photo7.jpg","photo8.jpg"];
 
-const envelope = document.getElementById("envelope");
-let mouseDownPos = {x:0, y:0};
-
-envelope.addEventListener("mousedown", (e) => {
-  mouseDownPos = {x: e.clientX, y: e.clientY};
-});
-
-envelope.addEventListener("click", (e) => {
-  const dx = Math.abs(e.clientX - mouseDownPos.x);
-  const dy = Math.abs(e.clientY - mouseDownPos.y);
-
-  // si le mouvement est petit, c'est un vrai clic, sinon c'était un scroll
-  if(dx < 5 && dy < 5){
-    openEnvelope(e);
-  }
-});
-
-  
 /* 💕 COEURS FLOTANTS */
 function createHeart(){
   const heart=document.createElement("div");
@@ -358,20 +173,15 @@ function createHeart(){
 }
 setInterval(createHeart,300);
 
-  
 window.addEventListener("load",()=>{
   setTimeout(()=>{
     document.getElementById("intro").style.display="none";
-    document.querySelector(".envelope").style.opacity=1;
+    envelope.style.opacity=1;
   },6000);
 });
 
-/* MUSIQUE */
 function startMusic(){
-  if(!musicStarted){
-    music.play().catch(()=>{});
-    musicStarted=true;
-  }
+  if(!musicStarted){ music.play().catch(()=>{}); musicStarted=true; }
 }
 
 const text = `Mon amour,
@@ -380,7 +190,7 @@ Chaque jour avec toi est un cadeau ❤️
 Je ne pourrai jamais t’en offrir assez pour t’exprimer tout l’amour que tu me procures.
 
 Malgré la distance qui nous sépare, ma passion pour toi ne fait que brûler plus fort…  
-Ce serait embêtant si ça me brûlait vraiment.😅
+Ce serait embêtant si ça me brûlait vraiment.
 
 Je dois passer cette deuxième Saint-Valentin loin de toi,  
 mais j’espère que ce petit présent saura te montrer que, peu importe la distance,  
@@ -391,123 +201,63 @@ Je t’aime.
 Sincèrement à toi,  
 Ton Théophile.`;
 
-
 function typeWriter(text,el,i=0){
   if(i<text.length){
     el.innerHTML+=text.charAt(i);
     setTimeout(()=>typeWriter(text,el,i+1),35);
   }else{
     typingFinished = true;
-
-    // Après 8 secondes si pas de clic → afficher rappel
     reminderTimeout = setTimeout(()=>{
-      if(envelopeClickCount < 2){
-        document.getElementById("reminder").style.opacity = 1;
-      }
+      if(envelopeClickCount < 2){ document.getElementById("reminder").style.opacity=1; }
     },8000);
   }
 }
 
-
-/* OUVERTURE ENVELOPPE */
-function openEnvelope(e){
-  e.stopPropagation();
-  envelopeClickCount++;
-
-  const env = document.querySelector(".envelope");
-  const textEl = document.getElementById("typedText");
-
-  // Premier clic → ouvrir enveloppe + texte
-  if(envelopeClickCount === 1){
-    startMusic();
-    env.classList.add("open");
-
-    typeWriter(text, textEl);
-  }
-
-  // Deuxième clic → message final
-  else if(envelopeClickCount === 2 && typingFinished){
-    clearTimeout(reminderTimeout);
-    document.getElementById("reminder").style.opacity = 0;
-    env.style.opacity = 0;  // faire disparaître l'enveloppe
-    showFinal();
-  }
-}
-
-/* FEU D'ARTIFICE + MESSAGE FINAL */
-function showFinal(){
-
-  const gallery=document.getElementById("gallery");
-  gallery.style.opacity=1;
-
-  const container=document.createElement("div");
-  container.className="filmContainer";
-
-  const totalStrips=8;
-
-  for(let i=0;i<totalStrips;i++){
-
-    const wrapper=document.createElement("div");
-    wrapper.className="stripWrapper";
-
-    const strip=document.createElement("div");
-    strip.className="filmStrip";
-
-    if(i%2!==0) strip.classList.add("scrollUp");
-
-    for(let r=0;r<8;r++){
-      images.forEach(src=>{
-        const img=document.createElement("img");
-        img.src=src;
-        strip.appendChild(img);
-      });
+/* Clic détecté sans bloquer scroll */
+let mouseDownPos={x:0,y:0};
+envelope.addEventListener("mousedown",(e)=>{mouseDownPos={x:e.clientX,y:e.clientY};});
+envelope.addEventListener("click",(e)=>{
+  const dx=Math.abs(e.clientX - mouseDownPos.x);
+  const dy=Math.abs(e.clientY - mouseDownPos.y);
+  if(dx<5 && dy<5){
+    envelopeClickCount++;
+    if(envelopeClickCount===1){ startMusic(); envelope.classList.add("open"); typeWriter(text,textEl); }
+    else if(envelopeClickCount===2 && typingFinished){
+      clearTimeout(reminderTimeout);
+      document.getElementById("reminder").style.opacity=0;
+      envelope.style.opacity=0;
+      showFinal();
     }
-
-    wrapper.appendChild(strip);
-    container.appendChild(wrapper);
   }
+});
 
+/* FEUX + BANDES */
+function showFinal(){
+  const gallery=document.getElementById("gallery"); gallery.style.opacity=1;
+  const container=document.createElement("div"); container.className="filmContainer";
+  const totalStrips=8;
+  for(let i=0;i<totalStrips;i++){
+    const wrapper=document.createElement("div"); wrapper.className="stripWrapper";
+    const strip=document.createElement("div"); strip.className="filmStrip";
+    if(i%2!==0) strip.classList.add("scrollUp");
+    for(let r=0;r<8;r++){ images.forEach(src=>{const img=document.createElement("img"); img.src=src; strip.appendChild(img);});}
+    wrapper.appendChild(strip); container.appendChild(wrapper);
+  }
   gallery.appendChild(container);
-
-  const overlay=document.createElement("div");
-  overlay.className="centerOverlay";
-  gallery.appendChild(overlay);
-
-  const final=document.createElement("div");
-  final.className="finalMessage";
-  final.innerHTML="Je t’aime plus que tout ❤️";
-  gallery.appendChild(final);
-
+  const overlay=document.createElement("div"); overlay.className="centerOverlay"; gallery.appendChild(overlay);
+  const final=document.createElement("div"); final.className="finalMessage"; final.innerHTML="Je t’aime plus que tout ❤️"; gallery.appendChild(final);
   setTimeout(()=>final.style.opacity=1,1500);
-
-  // Feux d'artifice colorés
-  for(let i=0;i<30;i++){
-    setTimeout(createFirework,i*150);
-  }
+  for(let i=0;i<30;i++){ setTimeout(createFirework,i*150);}
 }
 
 function createFirework(){
   const fw=document.createElement("div");
-  fw.style.position="absolute";
-  fw.style.left=Math.random()*100+"vw";
-  fw.style.top=Math.random()*100+"vh";
-  fw.style.width="8px";
-  fw.style.height="8px";
-  fw.style.borderRadius="50%";
-  fw.style.background=`hsl(${Math.random()*360},100%,60%)`;
-  fw.style.zIndex="5";
-  fw.style.animation="explode 1s ease-out forwards";
-  document.body.appendChild(fw);
+  fw.style.position="absolute"; fw.style.left=Math.random()*100+"vw"; fw.style.top=Math.random()*100+"vh";
+  fw.style.width="8px"; fw.style.height="8px"; fw.style.borderRadius="50%";
+  fw.style.background=`hsl(${Math.random()*360},100%,60%)`; fw.style.zIndex="5";
+  fw.style.animation="explode 1s ease-out forwards"; document.body.appendChild(fw);
   setTimeout(()=>fw.remove(),1000);
 }
-
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
