--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body{
 @keyframes fadeInText{from{opacity:0;}to{opacity:1;}}
 @keyframes fadeOutIntro{to{opacity:0;pointer-events:none;}}
 
-/* Enveloppe */
+/* Enveloppe style Bridgerton */
 .envelope{
   width:420px;
   height:300px;
@@ -61,15 +61,22 @@ body{
   box-shadow:0 10px 30px rgba(0,0,0,0.2);
   overflow:hidden;
 }
+
+/* Rabat supérieur */
 .flap{
   position:absolute;
   width:100%;
-  height:100%;
+  height:50%;
   background:#ff4d6d;
-  clip-path:polygon(0 0,100% 0,50% 50%);
+  clip-path:polygon(0 0,100% 0,50% 100%);
+  top:0;
+  left:0;
+  transform-origin:top;
   transition:1s;
   z-index:3;
 }
+
+/* Volets latéraux */
 .side{
   position:absolute;
   width:50%;
@@ -82,14 +89,14 @@ body{
 .side.left{left:0; clip-path:polygon(0 0,100% 50%,0 100%);}
 .side.right{right:0; clip-path:polygon(100% 0,0 50%,100% 100%);}
 
-/* Texte scrollable */
+/* Texte scrollable sur la lettre */
 .letterText{
   position:absolute;
   top:0;
   left:0;
   width:100%;
   height:100%;
-  padding:20px;
+  padding:30px 25px;
   box-sizing:border-box;
   font-family:'Great Vibes',cursive;
   font-size:22px;
@@ -102,11 +109,11 @@ body{
   z-index:1;
 }
 
-/* Ouverture */
+/* Enveloppe ouverte - effet lettre */
 .open{
   height:520px;
 }
-.open .flap{transform:rotateX(180deg); transform-origin:top;}
+.open .flap{transform:rotateX(-180deg);}
 .open .side.left{transform:translateX(-100%);}
 .open .side.right{transform:translateX(100%);}
 .open .letterText{opacity:1;}
@@ -158,10 +165,8 @@ const music=document.getElementById("music");
 const envelope = document.getElementById("envelope");
 const textEl = document.getElementById("typedText");
 
-/* GALERIE */
 const images=["photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg","photo5.jpg","photo6.jpg","photo7.jpg","photo8.jpg"];
 
-/* 💕 COEURS FLOTANTS */
 function createHeart(){
   const heart=document.createElement("div");
   heart.className="heart";
@@ -174,15 +179,10 @@ function createHeart(){
 setInterval(createHeart,300);
 
 window.addEventListener("load",()=>{
-  setTimeout(()=>{
-    document.getElementById("intro").style.display="none";
-    envelope.style.opacity=1;
-  },6000);
+  setTimeout(()=>{document.getElementById("intro").style.display="none"; envelope.style.opacity=1;},6000);
 });
 
-function startMusic(){
-  if(!musicStarted){ music.play().catch(()=>{}); musicStarted=true; }
-}
+function startMusic(){if(!musicStarted){music.play().catch(()=>{}); musicStarted=true;}}
 
 const text = `Mon amour,
 
@@ -202,18 +202,13 @@ Sincèrement à toi,
 Ton Théophile.`;
 
 function typeWriter(text,el,i=0){
-  if(i<text.length){
-    el.innerHTML+=text.charAt(i);
-    setTimeout(()=>typeWriter(text,el,i+1),35);
-  }else{
-    typingFinished = true;
-    reminderTimeout = setTimeout(()=>{
-      if(envelopeClickCount < 2){ document.getElementById("reminder").style.opacity=1; }
-    },8000);
+  if(i<text.length){el.innerHTML+=text.charAt(i); setTimeout(()=>typeWriter(text,el,i+1),35);}
+  else{typingFinished=true;
+    reminderTimeout = setTimeout(()=>{if(envelopeClickCount<2){document.getElementById("reminder").style.opacity=1;}},8000);
   }
 }
 
-/* Clic détecté sans bloquer scroll */
+/* Détection clic sans confondre scroll */
 let mouseDownPos={x:0,y:0};
 envelope.addEventListener("mousedown",(e)=>{mouseDownPos={x:e.clientX,y:e.clientY};});
 envelope.addEventListener("click",(e)=>{
@@ -221,13 +216,8 @@ envelope.addEventListener("click",(e)=>{
   const dy=Math.abs(e.clientY - mouseDownPos.y);
   if(dx<5 && dy<5){
     envelopeClickCount++;
-    if(envelopeClickCount===1){ startMusic(); envelope.classList.add("open"); typeWriter(text,textEl); }
-    else if(envelopeClickCount===2 && typingFinished){
-      clearTimeout(reminderTimeout);
-      document.getElementById("reminder").style.opacity=0;
-      envelope.style.opacity=0;
-      showFinal();
-    }
+    if(envelopeClickCount===1){ startMusic(); envelope.classList.add("open"); typeWriter(text,textEl);}
+    else if(envelopeClickCount===2 && typingFinished){ clearTimeout(reminderTimeout); document.getElementById("reminder").style.opacity=0; envelope.style.opacity=0; showFinal();}
   }
 });
 
@@ -261,3 +251,5 @@ function createFirework(){
 </script>
 </body>
 </html>
+
+
