--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <style>
 body{
   margin:0;
-  height:100vh;
-  overflow:hidden;
+  min-height:100vh;
   font-family:'Poppins',sans-serif;
   background:linear-gradient(135deg,#ff758c,#ff7eb3);
   display:flex;
@@ -18,6 +17,7 @@ body{
   align-items:center;
   color:white;
   text-align:center;
+  overflow:hidden;
 }
 
 /* COEURS */
@@ -30,7 +30,7 @@ body{
   to{transform:translateY(-10vh);opacity:0;}
 }
 
-/* INTRO */
+/* ================= INTRO ================= */
 .intro{
   position:fixed;
   inset:0;
@@ -42,12 +42,7 @@ body{
   z-index:10;
   animation:fadeOutIntro 2s ease 4s forwards;
 }
-
-.bouquet{
-  font-size:120px;
-  animation:pop3D 2s ease forwards;
-}
-
+.bouquet{ font-size:120px; animation:pop3D 2s ease forwards; }
 .introText{
   font-family:'Great Vibes',cursive;
   font-size:50px;
@@ -55,16 +50,11 @@ body{
   opacity:0;
   animation:fadeInText 2s ease 1s forwards;
 }
-
-@keyframes pop3D{
-  0%{transform:scale(0) rotateX(90deg);}
-  50%{transform:scale(1.3) rotateX(0);}
-  100%{transform:scale(1);}
-}
+@keyframes pop3D{0%{transform:scale(0) rotateX(90deg);}50%{transform:scale(1.3) rotateX(0);}100%{transform:scale(1);}}
 @keyframes fadeInText{from{opacity:0;}to{opacity:1;}}
 @keyframes fadeOutIntro{to{opacity:0;pointer-events:none;}}
 
-/* ENVELOPPE / LETTRE */
+/* ================= ENVELOPPE / LETTRE ================= */
 .envelope{
   width:420px;
   height:300px;
@@ -99,9 +89,8 @@ body{
   transition:1s;
   z-index:2;
 }
-
-.side.left{left:0; clip-path:polygon(0 0,100% 50%,0 100%);}
-.side.right{right:0; clip-path:polygon(100% 0,0 50%,100% 100%);}
+.side.left{ left:0; clip-path:polygon(0 0,100% 50%,0 100%); }
+.side.right{ right:0; clip-path:polygon(100% 0,0 50%,100% 100%); }
 
 /* Texte */
 .letterText{
@@ -112,34 +101,31 @@ body{
   height:100%;
   padding:20px;
   box-sizing:border-box;
-  overflow-y:auto;
   color:#b3003c;
   font-family:'Great Vibes',cursive;
   font-size:28px;
   line-height:1.7;
   white-space:pre-line;
+  overflow-y:auto;
   opacity:0;
   transition:1s;
   z-index:1;
 }
 
 /* OUVERTURE STYLE LETTRE */
-.open{
-  height:520px;
-}
-.open .flap{transform:rotateX(180deg); transform-origin:top;}
-.open .side.left{transform:translateX(-100%);}
-.open .side.right{transform:translateX(100%);}
-.open .letterText{opacity:1;}
+.open{ height:520px; }
+.open .flap{ transform:rotateX(180deg); transform-origin:top; }
+.open .side.left{ transform:translateX(-100%); }
+.open .side.right{ transform:translateX(100%); }
+.open .letterText{ opacity:1; }
 
-/* GALERIE / FILM STRIPS */
+/* ================= FILM STRIPS ================= */
 .gallery{
   position:fixed;
   inset:0;
   opacity:0;
   pointer-events:none;
 }
-
 .filmContainer{
   position:absolute;
   inset:0;
@@ -147,9 +133,7 @@ body{
   justify-content:space-between;
   overflow:hidden;
 }
-
-.stripWrapper{width:120px; overflow:hidden;}
-
+.stripWrapper{ width:120px; overflow:hidden; }
 .filmStrip{
   position:relative;
   width:100%;
@@ -161,16 +145,8 @@ body{
   padding:40px 0;
   animation:scrollDown 12s linear infinite;
 }
-
 .scrollUp{ animation:scrollUp 12s linear infinite; }
-
-.filmStrip img{
-  width:90px;
-  border-radius:6px;
-  border:4px solid #222;
-}
-
-/* Trous pellicule */
+.filmStrip img{ width:90px; border-radius:6px; border:4px solid #222; }
 .filmStrip::before,
 .filmStrip::after{
   content:"";
@@ -179,20 +155,12 @@ body{
   height:100%;
   width:20px;
   z-index:1;
-  background:repeating-linear-gradient(
-    to bottom,
-    transparent 0px,
-    transparent 30px,
-    #111 30px,
-    #111 50px
-  );
+  background:repeating-linear-gradient(to bottom,transparent 0px,transparent 30px,#111 30px,#111 50px);
 }
-
 .filmStrip::before{ left:0; }
 .filmStrip::after{ right:0; }
-
-@keyframes scrollDown{from{transform:translateY(-50%);} to{transform:translateY(0%);}}
-@keyframes scrollUp{from{transform:translateY(0%);} to{transform:translateY(-50%);}}
+@keyframes scrollDown{ from{transform:translateY(-50%);} to{transform:translateY(0%);} }
+@keyframes scrollUp{ from{transform:translateY(0%);} to{transform:translateY(-50%);} }
 
 /* Overlay centre */
 .centerOverlay{
@@ -243,7 +211,9 @@ body{
 
 <div id="reminder" style="position:absolute;left:5%;top:50%;transform:translateY(-50%);opacity:0;transition:1s;z-index:6;text-align:center;">
   <img src="https://cdn3d.iconscout.com/3d/premium/thumb/emoji-desole-tenant-un-bouquet-de-fleurs-3d-icon-png-download-12247331.png?f=webp" width="180">
-  <div style="font-family:'Poppins';margin-top:15px;color:white;">Clique encore sur l'enveloppe 🥺</div>
+  <div style="font-family:'Poppins';margin-top:15px;color:white;">
+    Clique encore sur l'enveloppe 🥺
+  </div>
 </div>
 
 <div class="gallery" id="gallery"></div>
@@ -254,14 +224,43 @@ body{
 
 <script>
 let envelopeClickCount = 0;
-let musicStarted=false;
 let typingFinished = false;
-let reminderTimeout;
-let mouseDownPos={x:0,y:0};
+let envelopeOpened = false;
+let reminderTimeout = null;
+let mouseDownPos = {x:0, y:0};
+const envelope = document.getElementById("envelope");
+const textEl = document.getElementById("typedText");
+const music = document.getElementById("music");
 
-const music=document.getElementById("music");
-const envelope=document.getElementById("envelope");
-const textEl=document.getElementById("typedText");
+/* COEURS */
+function createHeart(){
+  const heart=document.createElement("div");
+  heart.className="heart";
+  heart.innerHTML="❤️";
+  heart.style.left=Math.random()*100+"vw";
+  heart.style.fontSize=(15+Math.random()*20)+"px";
+  document.body.appendChild(heart);
+  setTimeout(()=>heart.remove(),6000);
+}
+setInterval(createHeart,300);
+
+/* INTRO */
+window.addEventListener("load",()=>{
+  setTimeout(()=>{
+    document.getElementById("intro").style.display="none";
+    envelope.style.opacity = 1;
+  },6000);
+});
+
+/* MUSIQUE */
+function startMusic(){
+  if(!music.started){
+    music.play().catch(()=>{});
+    music.started = true;
+  }
+}
+
+/* TEXTE */
 const text = `Mon amour,
 
 Chaque jour avec toi est un cadeau ❤️  
@@ -279,38 +278,11 @@ Je t’aime.
 Sincèrement à toi,  
 Ton Théophile.`;
 
-/* COEURS */
-function createHeart(){
-  const heart=document.createElement("div");
-  heart.className="heart";
-  heart.innerHTML="❤️";
-  heart.style.left=Math.random()*100+"vw";
-  heart.style.fontSize=(15+Math.random()*20)+"px";
-  document.body.appendChild(heart);
-  setTimeout(()=>heart.remove(),6000);
-}
-setInterval(createHeart,300);
-
-window.addEventListener("load",()=>{
-  setTimeout(()=>{
-    document.getElementById("intro").style.display="none";
-    envelope.style.opacity=1;
-  },6000);
-});
-
-function startMusic(){
-  if(!musicStarted){
-    music.play().catch(()=>{});
-    musicStarted=true;
-  }
-}
-
-/* TYPEWRITER */
-function typeWriter(text,el,i=0){
-  if(i<text.length){
-    el.innerHTML+=text.charAt(i);
-    setTimeout(()=>typeWriter(text,el,i+1),35);
-  }else{
+function typeWriter(text, el, i=0){
+  if(i < text.length){
+    el.innerHTML += text.charAt(i);
+    setTimeout(()=>typeWriter(text, el, i+1), 35);
+  } else {
     typingFinished = true;
     reminderTimeout = setTimeout(()=>{
       if(envelopeClickCount < 1){
@@ -320,58 +292,72 @@ function typeWriter(text,el,i=0){
   }
 }
 
-/* ENVELOPPE CLICK */
-envelope.addEventListener("mousedown",(e)=>{mouseDownPos={x:e.clientX,y:e.clientY};});
-envelope.addEventListener("click",(e)=>{
-  const dx=Math.abs(e.clientX - mouseDownPos.x);
-  const dy=Math.abs(e.clientY - mouseDownPos.y);
-  if(dx<5 && dy<5){
-    startMusic();
-    if(!typingFinished){
-      // termine texte immédiatement
-      textEl.innerHTML=text;
-      typingFinished=true;
-      // rappel emoji
-      reminderTimeout = setTimeout(()=>{
-        if(envelopeClickCount < 1){ document.getElementById("reminder").style.opacity = 1; }
-      },8000);
-      envelope.classList.add("open");
-    } else {
-      // texte fini → compte clic pour la surprise finale
-      envelopeClickCount++;
-      clearTimeout(reminderTimeout);
-      document.getElementById("reminder").style.opacity = 0;
-      if(envelopeClickCount===1){
-        envelope.classList.add("open"); // assure l’ouverture visuelle si jamais
-      } else if(envelopeClickCount===2){
-        envelope.style.opacity=0;
-        showFinal();
-      }
-    }
+/* OUVERTURE ENVELOPPE */
+envelope.addEventListener("mousedown", e => {
+  mouseDownPos = { x:e.clientX, y:e.clientY };
+});
+
+envelope.addEventListener("click", e => {
+  const dx = Math.abs(e.clientX - mouseDownPos.x);
+  const dy = Math.abs(e.clientY - mouseDownPos.y);
+  if(dx > 5 || dy > 5) return; // ignore drag scroll
+
+  startMusic();
+
+  if(!envelopeOpened){
+    envelope.classList.add("open");
+    envelopeOpened = true;
+    typeWriter(text, textEl);
+    return;
+  }
+
+  if(!typingFinished){
+    textEl.innerHTML = text;
+    typingFinished = true;
+    return;
+  }
+
+  envelopeClickCount++;
+  clearTimeout(reminderTimeout);
+  document.getElementById("reminder").style.opacity = 0;
+
+  if(envelopeClickCount === 2){
+    envelope.style.opacity = 0;
+    showFinal();
   }
 });
 
-/* GALERIE / FEUX */
-const images=["photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg","photo5.jpg","photo6.jpg","photo7.jpg","photo8.jpg"];
+/* GALERIE + FEUX */
+const images = [
+  "photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg",
+  "photo5.jpg","photo6.jpg","photo7.jpg","photo8.jpg"
+];
 
 function showFinal(){
   const gallery=document.getElementById("gallery");
   gallery.style.opacity=1;
-
   const container=document.createElement("div");
   container.className="filmContainer";
-
   const totalStrips=8;
+
   for(let i=0;i<totalStrips;i++){
     const wrapper=document.createElement("div");
     wrapper.className="stripWrapper";
     const strip=document.createElement("div");
     strip.className="filmStrip";
     if(i%2!==0) strip.classList.add("scrollUp");
-    for(let r=0;r<8;r++){ images.forEach(src=>{ const img=document.createElement("img"); img.src=src; strip.appendChild(img); }); }
+
+    for(let r=0;r<8;r++){
+      images.forEach(src=>{
+        const img=document.createElement("img");
+        img.src=src;
+        strip.appendChild(img);
+      });
+    }
     wrapper.appendChild(strip);
     container.appendChild(wrapper);
   }
+
   gallery.appendChild(container);
 
   const overlay=document.createElement("div");
@@ -382,7 +368,6 @@ function showFinal(){
   final.className="finalMessage";
   final.innerHTML="Je t’aime plus que tout ❤️";
   gallery.appendChild(final);
-
   setTimeout(()=>final.style.opacity=1,1500);
 
   for(let i=0;i<30;i++){ setTimeout(createFirework,i*150); }
